Fix z-index on export button toggle (#2036)

--- a/app/assets/stylesheets/components/_menus.scss
+++ b/app/assets/stylesheets/components/_menus.scss
@@ -2,6 +2,7 @@
   cursor: pointer;
   position: relative;
   font-family: $font-family;
+  z-index: 5;
 
   &[aria-expanded='true'] {
     outline: none;
